--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 
+    <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+
   </head>
   <body>
     <nav class="navbar navbar-default" role="navigation">
@@ -36,6 +40,43 @@
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
+
+    <div class="container">
+
+      <div class="row">
+        <div class="col-md-4">
+          <h1>UN TITRE POUR TESTER</h1>
+        </div>
+        <div class="col-md-8">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="row" id="footer">
+      <div class="col-md-4 col-md-offset-8">
+        <h4>KITTY</h4>
+
+        <a href="http://twitter.com/Moon_tini" target="_blank"> 
+          <i class="fa fa-twitter-square"></i> Twitter</a>
+
+        <a href="http://facebook.com/MounaOuaritini" target="_blank"> 
+          <i class="fa fa-facebook-square"></i> Facebook</a>
+
+        <h4>Made with love <a href="http://lewagon.org" class="orange">@lewagon</a>
+        </h4>
+
+
+      </div>
+    </div>
+
+
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
