--- a/contact.html
+++ b/contact.html
@@ -45,16 +45,28 @@
 
       <div class="row">
         <div class="col-md-4">
-          <h1>UNE MAP</h1>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2625.276537767056!2d2.3641780000000123!3d48.8529369!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e671ff03f19df1%3A0xd251223a25d29e80!2s25+Rue+du+Petit+Musc!5e0!3m2!1sfr!2sfr!4v1401134666338" width="100%" height="400" frameborder="0" style="border:0"></iframe>
+
         </div>
         <div class="col-md-8">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          </p>
+           <form action="http://forms.brace.io/mouna_ouaritini@hotmail.com" method="POST">
+              
+              <div class="form-group">
+              <label for="user_name">Name</label>
+              <input type="text" id="user_name" name="name" class="form-control" placeholder="Entrez votre nom">
+              </div>
+
+              <div class="form-group">
+              <label for="exampleInputEmail1">Email address</label>
+              <input type="email" name="_replyto" class="form-control" >
+              </div>
+              
+              <button type="submit" value="Send" class="btn btn-primary">
+                Contactez-nous
+
+          </form>
+
+
         </div>
       </div>
     </div>
