--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
 
         </div>
         <div class="col-md-8">
-           <form action="http://forms.brace.io/mouna_ouaritini@hotmail.com" method="POST">
+           <form action="http://forms.brace.io/xxx@hotmail.com" method="POST">
               
               <div class="form-group">
               <label for="user_name">Name</label>
